eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Teller_Depository__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Date__c</fullName>
        <label>Accept Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Accept_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accept User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Money_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <formula>Branch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Teller_Depository</relationshipLabel>
        <relationshipName>Teller_Money_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Limit_Percentage__c</fullName>
        <formula>(100 / if(Cash_Limit__c &gt; 0,Cash_Limit__c,Cash__c)) * Cash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Limit Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Limit__c</fullName>
        <label>Cash Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <label>Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheques_Value__c</fullName>
        <label>Cheques Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currencies__c</fullName>
        <label>Currencies</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Date__c</fullName>
        <label>Decline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decline User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Money_Storage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Of_Cheques__c</fullName>
        <label>No Of Cheques</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Cheques__c</fullName>
        <label>Num Cheques</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storage_Type__c</fullName>
        <label>Storage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Till</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vault</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Value__c</fullName>
        <description>Total Value of Cash held within Till</description>
        <label>Total GBP Cash Value</label>
        <summarizedField>Cash_Denomination__c.Total_Value_of_Denomination__c</summarizedField>
        <summaryFilterItems>
            <field>Cash_Denomination__c.CCY_of_Denomination__c</field>
            <operation>equals</operation>
            <value>GBP</value>
        </summaryFilterItems>
        <summaryForeignKey>Cash_Denomination__c.Teller_Depository__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_USD_Cash_Value__c</fullName>
        <label>Total USD Cash Value</label>
        <summarizedField>Cash_Denomination__c.Total_Value_of_USD_Denomination__c</summarizedField>
        <summaryFilterItems>
            <field>Cash_Denomination__c.CCY_of_Denomination__c</field>
            <operation>equals</operation>
            <value>USD</value>
        </summaryFilterItems>
        <summaryForeignKey>Cash_Denomination__c.Teller_Depository__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_EUR_Denomination__c</fullName>
        <label>Total Value of EUR Denomination</label>
        <summarizedField>Cash_Denomination__c.Total_Value_of_EUR_Denomination__c</summarizedField>
        <summaryFilterItems>
            <field>Cash_Denomination__c.CCY_of_Denomination__c</field>
            <operation>equals</operation>
            <value>EUR</value>
        </summaryFilterItems>
        <summaryForeignKey>Cash_Denomination__c.Teller_Depository__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value_of_QAR_Denomination__c</fullName>
        <label>Total Value of QAR Denomination</label>
        <summarizedField>Cash_Denomination__c.Total_Value_of_QAR_Denomination__c</summarizedField>
        <summaryFilterItems>
            <field>Cash_Denomination__c.CCY_of_Denomination__c</field>
            <operation>equals</operation>
            <value>QAR</value>
        </summaryFilterItems>
        <summaryForeignKey>Cash_Denomination__c.Teller_Depository__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Logged_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Logged In</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cashier_Money_Storage</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Teller Depository</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Branch_Name__c</columns>
        <columns>User_Logged_In__c</columns>
        <columns>Storage_Type__c</columns>
        <columns>Num_Cheques__c</columns>
        <columns>Cash__c</columns>
        <columns>Cash_Limit__c</columns>
        <columns>Total_Cash_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Manchester_Branch</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Branch_Name__c</columns>
        <columns>Cash__c</columns>
        <columns>Cash_Limit__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Cash_Value__c</columns>
        <columns>User_Logged_In__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Manchester</value>
        </filters>
        <label>Manchester Branch</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Small_Heath</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Branch_Name__c</columns>
        <columns>Cash__c</columns>
        <columns>Cash_Limit__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Cash_Value__c</columns>
        <columns>User_Logged_In__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>small</value>
        </filters>
        <label>Small Heath</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Teller_Depository</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller_Depository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>